# keyBoard

./: .app-meta.json  .gitignore  CLAUDE.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/api/color/: route.ts
app/api/config/: route.ts
app/api/devices/: route.ts
app/api/grab/: route.ts
app/api/status/: route.ts
app/color/: k100-layout.ts  page.tsx
docs/: k100-led-mapping.md
lib/: server-connection.ts
server/: CMakeLists.txt  build.sh  run-in-gui-session.sh
server/config/: keyboard.json
server/src/: ApiServer.cpp  ApiServer.h  BragiK100.cpp  BragiK100.h  ConfigManager.cpp  ConfigManager.h  DeviceManager.cpp  DeviceManager.h  HidrawManager.cpp  HidrawManager.h  UInputEmitter.cpp  UInputEmitter.h  main.cpp
